@@ -1,6 +1,7 @@
 hildon-home (0.3.33~unreleased) unstable; urgency=low
 
-  * foo
+  Jan Arne:
+  * Fixes: NB#120367 - hildon-home-76CD-11 crash observed while in layout mode
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu,  4 Jun 2009 16:07:16 +0300
 
