@@ -1,3 +1,14 @@
+2009-06-08  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes: NB#120367 - hildon-home-76CD-11 crash observed while in layout
+	mode
+
+	* src/hd-notification-manager.c (hd_notification_manager_timeout,
+	  hd_notification_manager_get, idle_emit): Do not emit signals on
+	  finalized object.
+
+	* debian/changelog: Update.
+
 2009-06-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.32
